<resources xmlns:xliff="http://schemas.android.com/tools">
    <!-- App name ______________________________________________________________________________ -->
    <string name="app_name">Sunshine</string>
    <!-- Label names ___________________________________________________________________________ -->
    <string name="title_detail_activity">Details</string>
    <string name="title_action_settings">Options</string>
    <string name="title_action_refresh">Refresh</string>
    <string name="title_action_share">Share</string>
    <string name="title_action_map">Find at GMaps</string>

    <!-- Some Keys _____________________________________________________________________________ -->
    <string name="detail_fragment_key" translatable="false">DETAIL_FRAGMENT</string>
    <string name="share_key" translatable="false">SHARE_ACTION</string>
    <string name="api_key" translatable="false">cbcf4d7b9f98970213d72a3b20d02e09</string>

    <!-- Location Preferences __________________________________________________________________ -->
    <string name="pref_location_key" translatable="false">LOCATION_KEY</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default" translatable="false">Maracaibo</string>
    <string name="pref_location_setting_key" translatable="false">LOCATION_SETTING_KEY</string>
    <string name="pref_location_setting_default" translatable="false">3646738</string> <!-- Caracas -->

    <!-- Metric Preferences ____________________________________________________________________ -->
    <string name="pref_tempUnit_key" translatable="false">METRIC_KEY</string>
    <string name="pref_tempUnit_label">Units</string>
    <string name="pref_tempUnit_default" translatable="false">metric</string>
    <string name="pref_tempUnit_celsius" translatable="false">metric</string>
    <string name="pref_tempUnit_fahrenheit" translatable="false">imperial</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today" translatable="true">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow" translatable="true">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date" translatable="false">
        <xliff:g id="day">%1$s</xliff:g>,
        <xliff:g id="date">%2$s</xliff:g>
    </string>
    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g>
    </string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type" translatable="false">sunshine.japps.com</string>
    <string name="content_authority" translatable="false">japps.sunshine_version_julio</string>
    <!-- Notification Format -->
    <string name="format_notification">
        Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification" translatable="false">last_notification
    </string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="no_weather">No weather information available</string>
    <string name="no_network">The network is not available</string>
    <string name="pref_location_status_key">location_status_key</string>
    <string name="empty_forecast_list_server_down">No weather information available. The server is not returning data.</string>
    <string name="empty_forecast_list_server_error">No weather information available. The server is not returning valid data. Please check for an updated version of Sunshine.</string>
    <string name="empty_forecast_list_invalid_location">No weather information available. The location in settings is not recognized by the weather server.</string>
    <string name="pref_location_error_description">Invalid Location (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>
    <string name="pref_location_unknown_description">Validating Location… (<xliff:g id="location_setting">%1$s</xliff:g>)"</string>

    <string name="format_art_url" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_<xliff:g id="description">%s</xliff:g>.png</string>

    <!-- Label for the art pack preference [CHAR LIMIT=30] -->
    <string name="pref_art_pack_label">Icon Pack</string>

    <!-- Label for Sunshine option in art pack preference [CHAR LIMIT=25] -->
    <string name="pref_art_pack_label_sunshine">Sunshine</string>

    <!-- Label for cute dogs option in art pack preference [CHAR LIMIT=25] -->
    <string name="pref_art_pack_label_cute_dogs">Cute dogs</string>

    <!-- Key name for art pack unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_key" translatable="false">art_pack</string>

    <!-- Value in SharedPreferences for Sunshine art pack option [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_sunshine" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-xxhdpi/art_%s.png</string>

    <!-- Value in SharedPreferences for cute dogs art pack  option [CHAR LIMIT=NONE] -->
    <string name="pref_art_pack_cute_dogs" translatable="false">https://raw.githubusercontent.com/udacity/Sunshine-Version-2/sunshine_master/app/src/main/res/drawable-mdpi/art_%s.png</string>


</resources>
